<resources>
    <string name="app_name">Waneat</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Ajustes</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="comments">Comentarios Adicionales</string>
    <string name="add_product">Añadir a la cesta</string>
    <string name="badge">€</string>
    <string name="editLogMail">Correo Elecrónico</string>
    <string name="editLogPass">Contraseña</string>
    <string name="buttonLogin">Iniciar</string>
    <string name="registerLabel">"¿Aún no tienes cuenta? ¡Registrate ahora! "</string>
    <string name="nombreRegister">Nombre</string>
    <string name="emailRegister">Correo Electrónico</string>
    <string name="passwordRegister">Contraseña</string>
    <string name="registrarButton">Registrarse</string>
    <string name="alreadyRegistered">¿Ya estás registrado? Accede a tu cuenta</string>
    <string name="categoria">CARNE</string>
    <string name="comentariosAdicionalesProducto">Comentarios: </string>
    <string name="precioProducto">Precio: </string>
    <string name="textView">Tarjeta de credito:</string>
    <string name="buttonIntroducirTarj">Introducir tarjeta</string>
    <string name="checkoutButton">IR A PAGAR</string>
    <string name="entrantesCategoria">Entrantes</string>
    <string name="pastaCategoria">Pasta</string>
    <string name="carneCategoria">Carne</string>
    <string name="pescadoCategoria">Pescado</string>
    <string name="ensaladaFragment">Ensalada</string>
    <string name="postresCategoria">Postre</string>
    <string name="bebidaCategoria">Bebida</string>
    <string name="p_add">Añadir a la cesta</string>
    <string name="p_add2">Hacer otro pedido</string>
    <string name="credit_card">Mi tarjeta: </string>
    <string name="guardarCredit">SIGUIENTE</string>
    <string name="profile_header">Mi perfil: </string>
    <string name="tagNombre">Nombre</string>
    <string name="tagApellidos">Apellidos</string>
    <string name="tagCorreo">Correo</string>
    <string name="tagTlf">Teléfono</string>
    <string name="buttonCambios">GUARDAR CAMBIOS</string>
    <string name="profile">Perfil</string>
    <string name="preffered_lang">Tu idioma favorito:</string>
    <string name="idioma1">Español</string>
    <string name="idioma2">Inglés</string>
    <string name="hacer_pedido">Hacer pedido</string>
    <string name="tagCod">Código postal</string>
    <string name="textViewEmpty">La cesta esta vacia</string>
    <string name="myOrders">Mis pedidos</string>
    <string name="creditCardHolderName">NOMBRE APELLIDO</string>
    <string name="tagProfile">Mi perfil:</string>
    <string name="tagDir">Direccion</string>
    <string name="tagCiudad">Ciudad</string>
    <string name="tagPais">Pais</string>
    <string name="nav_miperfil">Mi perfl</string>
    <string name="nav_mispedidos">Mis pedidos</string>
    <string name="nav_qr">Escanear QR</string>
    <string name="nav_mistarjetas">"Mis tarjetas "</string>
    <string name="nav_logout">Cerrar sesión</string>
    <string name="inicio">Inicio</string>
    <string name="informacion">Información</string>
    <string name="error">Ha ocurrido un error</string>
    <string name="infoRes">Información del restaurante recuperada correctamente</string>
    <string name="conexFail">Ha fallado la conexión</string>
    <string name="tarjetaNoGuardada">No tienes tarjetas guardadas</string>
    <string name="addCard">Añadir tarjeta</string>
    <string name="changeCard">Cambiar tarjeta</string>
    <string name="guardar">Guardar</string>
    <string name="cargandoTarda">Cargando... (Podría tardar un rato)</string>
    <string name="noConex">No se ha podido conectar, comprueba tu conexión a internet</string>
    <string name="noPedidos">No hay pedidos registrados</string>
    <string name="todosLosDatos">Introduce todos los campos, por favor!</string>
    <string name="pedidoCorrecto">El pedido ha sido tramitado correctamente</string>
    <string name="add">Añadido: </string>
    <string name="correct"> a la cesta correctamente</string>
    <string name="datosIncorrectosTarjeta">Los datos de la tarjeta no son correctos</string>
    <string name="cambiosGuardados">Cambios guardados</string>
    <string name="datosIncorrectos">Datos incorrectos</string>
    <string name="fail">Fallo en inicio de sesión</string>
    <string name="failRegistro">Fallo en el registro</string>
    <string name="modificarCorrecto">Se ha actualizado la información correctamente</string>
    <string name="cambiar_tarjeta">Cambiar tarjeta</string>
    <string name="pay">Ir a pagar</string>
    <string name="tramitar">TRAMITAR PEDIDO</string>
    <string name="otra_tarjeta">Añadir otra tarjeta</string>
    <string name="empty_cart">La cesta esta vacia</string>
    <string name="last_datos"> TERMINE DE INTRODUCIR SUS DATOS</string>
    <string name="name">Nombre</string>
    <string name="nif">NIF</string>
</resources>
